working as expected

--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "@fleetbase/intl-lint",
-  "version": "1.0.0",
-  "description": "Node scripts for maintaining and analyzing the fleetops extension",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "js-yaml": "^4.1.0"
-  }
+    "name": "@fleetbase/intl-lint",
+    "version": "0.0.1",
+    "description": "Internationalization translation file linter script for Fleetbase Extensions and Application",
+    "main": "index.js",
+    "scripts": {
+        "start": "node ./index.js"
+    },
+    "bin": {
+        "fleetbase-intl-lint": "./cli.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "js-yaml": "^4.1.0",
+        "yargs": "^17.7.2"
+    }
 }
